fixed issue with modals showing contents beneath it when scrolled extremely on mobile, made back navigation while modal is open, to close the modals instead of going to the previous webpage

--- a/teach-me-ui/src/styles/_responsive.scss
+++ b/teach-me-ui/src/styles/_responsive.scss
@@ -443,10 +443,14 @@
 
 @media only screen and (max-width: 480px) {
 
+  .colleague-nav {
+    padding: 0 !important;
+    margin: 0 0.8rem !important;
+  }
+
   .cancel-modal {
     position: fixed;
     top: 0;
-    z-index: 70;
   }
 
   #grid-box1 {
@@ -454,15 +458,17 @@
   }
 
   .modal-contents {
-    height: 90% !important;
-    max-height: 94% !important;
-    margin-top: 4.85rem;
+    position: fixed !important;
+    max-height: 92vh !important;
+    top: 3.22rem;
+    width: 100%;
   }
 
   .main-modal {
-    height: 100vh;
+    height: 110vh;
     width: 100vw !important;
     border-radius: 0;
+    box-shadow: none;
 
     ::-webkit-scrollbar {
       width: 0.5rem;
